[project]
name = "strava-import"
version = "0.1.0"
description = "Importação e análise de dados do Strava"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
    { name = "Fabio", email = "your.email@example.com" }
]

[project.scripts]
strava-import = "strava_import.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strava_import"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
