[project]
name = "strava-exporter"
version = "0.1.0"
description = "Exportação de atividades do Strava para Markdown"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
authors = [
    { name = "Fabio", email = "your.email@example.com" }
]

[project.scripts]
strava-exporter = "strava_exporter.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/strava_exporter"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
